==> Oldthrees/can-develop/can_test/USER/can/can.c <==
#include <can.h>
#include "CANServe.h"

//CAN的GPIO配置
static void CAN_GPIO_Config(void)
{
    GPIO_InitTypeDef GPIO_InitStructure;   	

    /* Enable GPIO clock */
    RCC_APB2PeriphClockCmd(CAN_TX_GPIO_CLK|CAN_RX_GPIO_CLK, ENABLE);
    //重映射引脚
    GPIO_PinRemapConfig(GPIO_Remap1_CAN1, ENABLE);

     /* Configure CAN TX pins */
    GPIO_InitStructure.GPIO_Pin = CAN_TX_PIN;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;		        //复用推挽输出
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;

    GPIO_Init(CAN_TX_GPIO_PORT, &GPIO_InitStructure);

    /* Configure CAN RX  pins */
    GPIO_InitStructure.GPIO_Pin = CAN_RX_PIN ;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IPU;	                //上拉输入
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;

    GPIO_Init(CAN_RX_GPIO_PORT, &GPIO_InitStructure);
}

static void CAN_NVIC_Config(void)
{
    NVIC_InitTypeDef NVIC_InitStructure;
    /* Configure one bit for preemption priority */
    NVIC_PriorityGroupConfig(NVIC_PriorityGroup_1);
    /*中断设置*/
    NVIC_InitStructure.NVIC_IRQChannel = CAN_RX_IRQ;	                //CAN1 RX0中断
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0;		//抢占优先级0
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0;			//子优先级为0
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
    NVIC_Init(&NVIC_InitStructure);
}

//CAN的模式配置
static void CAN_Mode_Config(void)
{
    CAN_InitTypeDef        CAN_InitStructure;
    /************************CAN通讯参数设置**********************************/
    /* Enable CAN clock */
    RCC_APB1PeriphClockCmd(CAN_CLK, ENABLE);

    /*CAN寄存器初始化*/
    CAN_DeInit(CANx);
    CAN_StructInit(&CAN_InitStructure);

    /*CAN单元初始化*/
    CAN_InitStructure.CAN_TTCM=DISABLE;			   //MCR-TTCM  关闭时间触发通讯模式使能
    CAN_InitStructure.CAN_ABOM=ENABLE;			   //MCR-ABOM  自动离线管理
    CAN_InitStructure.CAN_AWUM=ENABLE;			   //MCR-AWUM  使用自动唤醒模式
    CAN_InitStructure.CAN_NART=DISABLE;			   //MCR-NART  禁止报文自动重传         DISABLE-自动重传
    CAN_InitStructure.CAN_RFLM=DISABLE;			   //MCR-RFLM  接收FIFO 锁定模式        DISABLE-溢出时新报文会覆盖原有报文
    CAN_InitStructure.CAN_TXFP=DISABLE;			   //MCR-TXFP  发送FIFO优先级           DISABLE-优先级取决于报文标示符
    CAN_InitStructure.CAN_Mode = CAN_Mode_Normal;          //正常工作模式
    CAN_InitStructure.CAN_SJW=CAN_SJW_2tq;		   //BTR-SJW   重新同步跳跃宽度 2个时间单元
     
    /* ss=1 bs1=5 bs2=3 位时间宽度为(1+5+3) 波特率即为时钟周期tq*(1+3+5)  */
    CAN_InitStructure.CAN_BS1=CAN_BS1_5tq;		   //BTR-TS1 时间段1 占用了5个时间单元
    CAN_InitStructure.CAN_BS2=CAN_BS2_3tq;		   //BTR-TS1 时间段2 占用了3个时间单元	

    /* CAN Baudrate = 1 MBps (1MB已为stm32的CAN最高速率) (CAN 时钟频率为 APB1 = 36 MHz) */
    CAN_InitStructure.CAN_Prescaler =4;		           ////BTR-BRP 波特率分频器  定义了时间单元的时间长度 36/(1+5+3)/4=1 Mbps
    CAN_Init(CANx, &CAN_InitStructure);
}

//CAN的过滤器配置
static void CAN_Filter_Config(void)
{
    CAN_FilterInitTypeDef  CAN_FilterInitStructure;

    /*CAN筛选器初始化*/
    CAN_FilterInitStructure.CAN_FilterNumber=0;						//筛选器组0
    CAN_FilterInitStructure.CAN_FilterMode=CAN_FilterMode_IdMask;	//工作在掩码模式
    CAN_FilterInitStructure.CAN_FilterScale=CAN_FilterScale_32bit;	//筛选器位宽为单个32位
    /* 使能筛选器，按照标志的内容进行对比筛选，扩展ID不是如下的就抛弃掉，是的话，会存入FIFO0 */

    CAN_FilterInitStructure.CAN_FilterIdHigh = 0;
    CAN_FilterInitStructure.CAN_FilterIdLow = 0;
    CAN_FilterInitStructure.CAN_FilterMaskIdHigh= 0;			//筛选器高16位每位必须匹配
    CAN_FilterInitStructure.CAN_FilterMaskIdLow= 0;			//筛选器低16位每位必须匹配
    
//    CAN_FilterInitStructure.CAN_FilterIdHigh= ((((u32)0x1314<<3)|CAN_ID_EXT|CAN_RTR_DATA)&0xFFFF0000)>>16;		//要筛选的ID高位
//    CAN_FilterInitStructure.CAN_FilterIdLow= (((u32)0x1314<<3)|CAN_ID_EXT|CAN_RTR_DATA)&0xFFFF; //要筛选的ID地位
//    CAN_FilterInitStructure.CAN_FilterMaskIdHigh= 0xFFFF;			//筛选器高16位每位必须匹配
//    CAN_FilterInitStructure.CAN_FilterMaskIdLow= 0xFFFF;			//筛选器低16位每位必须匹配
    CAN_FilterInitStructure.CAN_FilterFIFOAssignment=CAN_Filter_FIFO0 ;	//筛选器被关联到FIFO0
    CAN_FilterInitStructure.CAN_FilterActivation=ENABLE;			//使能筛选器
    CAN_FilterInit(&CAN_FilterInitStructure);
    /*CAN通讯中断使能*/
    CAN_ITConfig(CANx, CAN_IT_FMP0, ENABLE);
}

void CAN_Config(void)
{
    CAN_GPIO_Config();
    CAN_NVIC_Config();
    CAN_Mode_Config();
//    CAN_Filter_Config();
    CANFilterConfig_IdMask_StandardIdOnly();   
}

void Init_RxMes(CanRxMsg *RxMessage)
{
    uint8_t ubCounter = 0;

    /*把接收结构体清零*/
    RxMessage->StdId = 0x00;
    RxMessage->ExtId = 0x00;
    RxMessage->IDE = CAN_ID_STD;
    RxMessage->DLC = 0;
    RxMessage->FMI = 0;
    
    for (ubCounter = 0; ubCounter < 8; ubCounter++)
    {
      RxMessage->Data[ubCounter] = 0x00;
    }
}

void CAN_SetMsg(CanTxMsg *TxMessage)
{	  
    uint8_t ubCounter = 0;

    TxMessage->StdId=0x222;						 
//    TxMessage->ExtId=0x1288;
    TxMessage->IDE=CAN_ID_STD;
    TxMessage->RTR=CAN_RTR_DATA;
    TxMessage->DLC=8;

    for (ubCounter = 0; ubCounter < 8; ubCounter++)
    {
        TxMessage->Data[ubCounter] = ubCounter;
    }
}
